--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@
 *.exe
 *.out
 *.app
+1_c++/.vscode/settings.json
+1_c++/1_basicusage/2loop
+1_c++/2_function/3func
+1_c++/3_array_pointer/.gitkeep
+1_c++/4_class_oop/.gitkeep
+1_c++/5_file_io/.gitkeep
+1_c++/6_stl/.gitkeep
+1_c++/.vscode/tasks.json
